@@ -10,6 +10,8 @@ theme_grey <- function(base_size = 12, base_family = "") {
     axis.text.x =        theme_text(family = base_family, size = base_size * 0.8 , lineheight = 0.9, colour = "grey50", vjust = 1),
     axis.text.y =        theme_text(family = base_family, size = base_size * 0.8, lineheight = 0.9, colour = "grey50", hjust = 1),
     axis.ticks =         theme_segment(colour = "grey50"),
+    axis.ticks.x =       NA,
+    axis.ticks.y =       NA,
     axis.title.x =       theme_text(family = base_family, size = base_size, vjust = 0.5),
     axis.title.y =       theme_text(family = base_family, size = base_size, angle = 90, vjust = 0.5),
     axis.ticks.length =  unit(0.15, "cm"),
@@ -56,6 +58,8 @@ theme_bw <- function(base_size =  12, base_family = "") {
     axis.text.x =        theme_text(family = base_family, size =  base_size * 0.8 , lineheight =  0.9, vjust =  1),
     axis.text.y =        theme_text(family = base_family, size =  base_size * 0.8, lineheight =  0.9, hjust =  1),
     axis.ticks =         theme_segment(colour =  "black", size =  0.2),
+    axis.ticks.x =       NA,
+    axis.ticks.y =       NA,
     axis.title.x =       theme_text(family = base_family, size =  base_size, vjust =  1),
     axis.title.y =       theme_text(family = base_family, size =  base_size, angle =  90, vjust =  0.5),
     axis.ticks.length =  unit(0.3, "lines"),
